# nlp-utils

./: Dockerfile  README.md  docker_build.sh  docker_run.sh  lint_and_test.sh  pyproject.toml
nlputils/normalize/: __init__.py  normalization.py
nlputils/separate/: README.md  __init__.py  sentence_segmentation.py
tests/normalize/: test_normalize.py
tests/separate/: test_separate.py
